# cpp_project

./: .gitignore  CMakeLists.txt  Descr  Descr.bak  bench_add.cpp  main.cpp  my_add.cpp  my_add.hpp  test_add.cpp
.github/workflows/: test.yaml
